# module-6-usman4li

./: .coverage  .env  .gitignore  README.md  pyproject.toml
app/: __init__.py
app/controller/: animals_route.py  employees_route.py
app/controller/animals/schema/: update_animals_request.py
app/controller/employees/schema/: update_employees_request.py
app/models/: animals.py  employees.py
app/repositories/: animal_repo.py  employee_repo.py
app/route/: animals_route.py
app/service/: animal_service.py  employee_service.py
app/utils/: api_response.py
migrations/versions/: 28ecbd5b3f94_add_animals_table.py
tests/: conftest.py
tests/controller/: test_animals_route.py  test_employees_route.py
tests/service/: test_animal_service.py  test_employee_service.py
tests/utils/: test_api_response.py
